Multiple updates for increased parity with ByteArray: - Added (almost too much) documentation - Improved terminology w/ shorter, less-pedantic function names - Moved Memory.IO.Array to Memory.IO.Access.Array - Split Allocator (again) into LayoutSpace and Allocator - Implemented the Std allocator that uses GHC's wrapping of the C malloc and free - Added notes about parameterizing Allocator in Std - Implemented allocRet, empty for parity (and some others) - Added implicit interface example with an implicit allocRet & empty

--- a/memalloc-io/memalloc-io.cabal
+++ b/memalloc-io/memalloc-io.cabal
@@ -75,17 +75,20 @@ library
     Control.Monad.IO.Allocator
     Memory.IO.Address
     Memory.IO.Allocator
+    Memory.IO.Allocator.Implicit
     Memory.IO.Allocator.Arena
     Memory.IO.Allocator.Stack
-    -- Memory.IO.Allocator.Std
+    Memory.IO.Allocator.Std
     -- Memory.IO.Allocator.Pool
     -- Memory.IO.Allocator.Slab
+    Memory.IO.Access.Array
     Memory.IO.Access.Castable
     Memory.IO.Access.Handle
     Memory.IO.Access.Pointer
     Memory.IO.Access.Reference
     Memory.IO.Access.Retainable
-    Memory.IO.Array
+    -- Memory.IO.Access.Weak
+    Memory.IO.Layout
     Memory.IO.Prelude
 
   other-modules:      Paths_memalloc_io
@@ -95,6 +98,7 @@ library
 
   if flag(use-mtl)
     exposed-modules:
+      Control.Monad.IO.Trans.Allocator
     build-depends:
       , mtl
     cpp-options: -DUSE_MTL
